update logic of order